--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.datasource.url=jdbc:mysql://localhost/savegames?createDatabaseIfNotExist=
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
+
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.packagesToScan=com.ecommerce.savegames.controller
+springdoc.swagger-ui.use-root-path=true
